Fixed margin and gap

--- a/src/components/jobCatalog/jobCatalog.sass
+++ b/src/components/jobCatalog/jobCatalog.sass
@@ -90,7 +90,7 @@
     align-items: center
     gap: 15px
     padding: 0 50px
-    margin-bottom: 60px
+    margin-bottom: 30px
     margin-top: 30px
 
     &__name
